tests/ui/block-result/issue-3563.stderr
error[E0599]: no method named `b` found for reference `&Self` in the current scope
  --> $DIR/issue-3563.rs:3:17
   |
LL |         || self.b()
   |                 ^
   |
help: there is a method `a` with a similar name
   |
LL -         || self.b()
LL +         || self.a()
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
